Gallery images changed

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
 
     <!-- Site Metas -->
-    <title>Food Funday Restaurant - One page HTML Responsive</title>
-    <meta name="keywords" content="">
+    <title>Porto Adria Restaurant</title>
+    <meta name="keywords" content="restaurants near me, food near me, porto adria, restaurant, mexican restaurants, italian restaurants">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <!-- <meta name="author" content=""> -->
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/favico.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 
     <!-- Bootstrap CSS -->
@@ -59,8 +59,8 @@
                                     <span class="icon-bar"></span>
                                 </button>
                                 <div class="logo">
-                                    <a class="navbar-brand js-scroll-trigger logo-header" href="#">
-                                        <img src="images/Untitled (1).png" alt="Logo" width="300px">
+                                    <a class="navbar-brand js-scroll-trigger logo-header" href="index.html">
+                                        <img src="images/logoHeader.png" alt="Logo" width="300px">
                                     </a>
                                 </div>
                             </div>
@@ -191,7 +191,7 @@
                         <div class="col-md-8 col-sm-12 co-xs-12 gal-item">
                             <div class="box">
                                 <a href="#" data-toggle="modal" data-target="#1">
-                                    <img src="images/gallery_01.jpg" alt="" />
+                                    <img src="images/portoGalerry.png" alt="Salmon with grilled vegetables and rice" />
                                 </a>
                                 <div class="modal fade" id="1" tabindex="-1" role="dialog">
                                     <div class="modal-dialog" role="document">
@@ -199,10 +199,10 @@
                                             <button type="button" class="close" data-dismiss="modal"
                                                 aria-label="Close"><span aria-hidden="true">×</span></button>
                                             <div class="modal-body">
-                                                <img src="images/gallery_01.jpg" alt="" />
+                                                <img src="images/portoGalerry.png" alt="Salmon with grilled vegetables and rice" />
                                             </div>
                                             <div class="col-md-12 description">
-                                                <h4>This is the 1 one on my Gallery</h4>
+                                                <h4>Lachs mit gegrilltem Gemüse und Reis</h4>
                                             </div>
                                         </div>
                                     </div>
@@ -212,7 +212,7 @@
                         <div class="col-md-4 col-sm-6 co-xs-12 gal-item">
                             <div class="box">
                                 <a href="#" data-toggle="modal" data-target="#2">
-                                    <img src="images/gallery_02.jpg" alt="" />
+                                    <img src="images/portoGallery1.png" alt="" />
                                 </a>
                                 <div class="modal fade" id="2" tabindex="-1" role="dialog">
                                     <div class="modal-dialog" role="document">
@@ -220,7 +220,7 @@
                                             <button type="button" class="close" data-dismiss="modal"
                                                 aria-label="Close"><span aria-hidden="true">×</span></button>
                                             <div class="modal-body">
-                                                <img src="images/gallery_02.jpg" alt="" />
+                                                <img src="images/portoGallery1.png" alt="" />
                                             </div>
                                             <div class="col-md-12 description">
                                                 <h4>This is the 2 one on my Gallery</h4>
@@ -233,7 +233,7 @@
                         <div class="col-md-4 col-sm-6 co-xs-12 gal-item">
                             <div class="box">
                                 <a href="#" data-toggle="modal" data-target="#3">
-                                    <img src="images/gallery_03.jpg" alt="" />
+                                    <img src="images/portoGallery2.png" alt="" />
                                 </a>
                                 <div class="modal fade" id="3" tabindex="-1" role="dialog">
                                     <div class="modal-dialog" role="document">
@@ -241,7 +241,7 @@
                                             <button type="button" class="close" data-dismiss="modal"
                                                 aria-label="Close"><span aria-hidden="true">×</span></button>
                                             <div class="modal-body">
-                                                <img src="images/gallery_03.jpg" alt="" />
+                                                <img src="images/portoGallery2.png" alt="" />
                                             </div>
                                             <div class="col-md-12 description">
                                                 <h4>This is the 3 one on my Gallery</h4>
@@ -254,7 +254,7 @@
                         <div class="col-md-4 col-sm-6 co-xs-12 gal-item">
                             <div class="box">
                                 <a href="#" data-toggle="modal" data-target="#4">
-                                    <img src="images/gallery_04.jpg" alt="" />
+                                    <img src="images/portoGallery3.png" alt="" />
                                 </a>
                                 <div class="modal fade" id="4" tabindex="-1" role="dialog">
                                     <div class="modal-dialog" role="document">
@@ -262,7 +262,7 @@
                                             <button type="button" class="close" data-dismiss="modal"
                                                 aria-label="Close"><span aria-hidden="true">×</span></button>
                                             <div class="modal-body">
-                                                <img src="images/gallery_04.jpg" alt="" />
+                                                <img src="images/portoGallery3.png" alt="" />
                                             </div>
                                             <div class="col-md-12 description">
                                                 <h4>This is the 4 one on my Gallery</h4>
@@ -275,7 +275,7 @@
                         <div class="col-md-4 col-sm-6 co-xs-12 gal-item">
                             <div class="box">
                                 <a href="#" data-toggle="modal" data-target="#5">
-                                    <img src="images/gallery_05.jpg" alt="" />
+                                    <img src="images/portoGallery4.png" alt="" />
                                 </a>
                                 <div class="modal fade" id="5" tabindex="-1" role="dialog">
                                     <div class="modal-dialog" role="document">
@@ -283,7 +283,7 @@
                                             <button type="button" class="close" data-dismiss="modal"
                                                 aria-label="Close"><span aria-hidden="true">×</span></button>
                                             <div class="modal-body">
-                                                <img src="images/gallery_05.jpg" alt="" />
+                                                <img src="images/portoGallery4.png" alt="" />
                                             </div>
                                             <div class="col-md-12 description">
                                                 <h4>This is the 5 one on my Gallery</h4>
@@ -296,7 +296,7 @@
                         <div class="col-md-4 col-sm-6 co-xs-12 gal-item">
                             <div class="box">
                                 <a href="#" data-toggle="modal" data-target="#9">
-                                    <img src="images/gallery_06.jpg" alt="" />
+                                    <img src="images/portoGarden.png" alt="" />
                                 </a>
                                 <div class="modal fade" id="9" tabindex="-1" role="dialog">
                                     <div class="modal-dialog" role="document">
@@ -304,7 +304,7 @@
                                             <button type="button" class="close" data-dismiss="modal"
                                                 aria-label="Close"><span aria-hidden="true">×</span></button>
                                             <div class="modal-body">
-                                                <img src="images/gallery_06.jpg" alt="" />
+                                                <img src="images/portoGarden.png" alt="" />
                                             </div>
                                             <div class="col-md-12 description">
                                                 <h4>This is the 6 one on my Gallery</h4>
@@ -317,7 +317,7 @@
                         <div class="col-md-8 col-sm-12 co-xs-12 gal-item">
                             <div class="box">
                                 <a href="#" data-toggle="modal" data-target="#10">
-                                    <img src="images/gallery_07.jpg" alt="" />
+                                    <img src="images/portoGarden1.png" alt="" />
                                 </a>
                                 <div class="modal fade" id="10" tabindex="-1" role="dialog">
                                     <div class="modal-dialog" role="document">
@@ -325,7 +325,7 @@
                                             <button type="button" class="close" data-dismiss="modal"
                                                 aria-label="Close"><span aria-hidden="true">×</span></button>
                                             <div class="modal-body">
-                                                <img src="images/gallery_07.jpg" alt="" />
+                                                <img src="images/portoGarden1.png" alt="" />
                                             </div>
                                             <div class="col-md-12 description">
                                                 <h4>This is the 7 one on my Gallery</h4>
@@ -338,7 +338,7 @@
                         <div class="col-md-4 col-sm-6 co-xs-12 gal-item">
                             <div class="box">
                                 <a href="#" data-toggle="modal" data-target="#11">
-                                    <img src="images/gallery_08.jpg" alt="" />
+                                    <img src="images/portoGarden2.png" alt="" />
                                 </a>
                                 <div class="modal fade" id="11" tabindex="-1" role="dialog">
                                     <div class="modal-dialog" role="document">
@@ -346,7 +346,7 @@
                                             <button type="button" class="close" data-dismiss="modal"
                                                 aria-label="Close"><span aria-hidden="true">×</span></button>
                                             <div class="modal-body">
-                                                <img src="images/gallery_08.jpg" alt="" />
+                                                <img src="images/portoGarden2.png" alt="" />
                                             </div>
                                             <div class="col-md-12 description">
                                                 <h4>This is the 8 one on my Gallery</h4>
@@ -359,7 +359,7 @@
                         <div class="col-md-4 col-sm-6 co-xs-12 gal-item">
                             <div class="box">
                                 <a href="#" data-toggle="modal" data-target="#12">
-                                    <img src="images/gallery_09.jpg" alt="" />
+                                    <img src="images/portoGarden3.jpeg" alt="" />
                                 </a>
                                 <div class="modal fade" id="12" tabindex="-1" role="dialog">
                                     <div class="modal-dialog" role="document">
@@ -367,7 +367,7 @@
                                             <button type="button" class="close" data-dismiss="modal"
                                                 aria-label="Close"><span aria-hidden="true">×</span></button>
                                             <div class="modal-body">
-                                                <img src="images/gallery_09.jpg" alt="" />
+                                                <img src="images/portoGarden3.jpeg" alt="" />
                                             </div>
                                             <div class="col-md-12 description">
                                                 <h4>This is the 9 one on my Gallery</h4>
