--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <!-- Site Metas -->
     <title>Porto Adria Restaurant</title>
-    <meta name="keywords" content="restaurants near me, food near me, porto adria, restaurant, mexican restaurants, italian restaurants">
+    <meta name="keywords"
+        content="restaurants near me, food near me, porto adria, restaurant, mexican restaurants, italian restaurants">
     <meta name="description" content="">
     <!-- <meta name="author" content=""> -->
 
@@ -199,7 +200,8 @@
                                             <button type="button" class="close" data-dismiss="modal"
                                                 aria-label="Close"><span aria-hidden="true">×</span></button>
                                             <div class="modal-body">
-                                                <img src="images/portoGalerry.png" alt="Salmon with grilled vegetables and rice" />
+                                                <img src="images/portoGalerry.png"
+                                                    alt="Salmon with grilled vegetables and rice" />
                                             </div>
                                             <div class="col-md-12 description">
                                                 <h4>Lachs mit gegrilltem Gemüse und Reis</h4>
