--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <title>Porto Adria Restaurant</title>
     <meta name="keywords"
         content="restaurants near me, food near me, porto adria, restaurant, mexican restaurants, italian restaurants">
-    <meta name="description" content="">
+    <meta name="description" content="Genießen Sie in unserem Restaurant den kulinarischen Genuss des Balkans. Unsere reichhaltige Speisekarte hält für jeden Geschmack etwas bereit. Im netten Ambiente
+    servieren wir Ihnen frisch zubereitete und liebevoll angerichtete Steak- &
+    Filetspezialitäten, sowie verschiedene Fisch- und vegetarische Gerichte.">
     <!-- <meta name="author" content=""> -->
 
     <!-- Site Icons -->
