About Us Image change

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
                         <div class="about-images">
-                            <img class="about-main" src="images/about-main.jpg" alt="About Main Image">
-                            <img class="about-inset" src="images/about-inset.jpg" alt="About Inset Image">
+                            <img class="about-main" src="images/cevapi.jpg" width="350px" alt="About Main Image">
+                            <img class="about-inset" src="images/special-menu.jpg" width="150px" alt="About Inset Image">
                         </div>
                     </div>
                 </div>
@@ -455,6 +455,19 @@
                                     <li>
                                         <p>Montag - Sonntag </p>
                                         <span> 17:00 - 22:00 Uhr</span>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!-- end footer-box-d -->
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+                            <div class="footer-box-d">
+                                <h3>Zur Hauptsaison: Mittagstisch</h3>
+
+                                <ul>
+                                    <li>
+                                        <p>Montag - Sonntag </p>
+                                        <span> 12:00 - 15:00 Uhr</span>
                                     </li>
                                 </ul>
                             </div>
