Meta tags changed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <!-- Site Metas -->
     <title>Porto Adria Restaurant</title>
     <meta name="keywords"
-        content="restaurants near me, food near me, porto adria, restaurant, mexican restaurants, italian restaurants">
+        content="restaurants near me, food near me, porto adria, restaurant, mexican restaurants, italian restaurants, porto adria restaurant">
+
     <meta name="description" content="Genießen Sie in unserem Restaurant den kulinarischen Genuss des Balkans. Unsere reichhaltige Speisekarte hält für jeden Geschmack etwas bereit. Im netten Ambiente
     servieren wir Ihnen frisch zubereitete und liebevoll angerichtete Steak- &
     Filetspezialitäten, sowie verschiedene Fisch- und vegetarische Gerichte.">
@@ -153,7 +154,8 @@
                     <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
                         <div class="about-images">
                             <img class="about-main" src="images/cevapi.jpg" width="350px" alt="About Main Image">
-                            <img class="about-inset" src="images/special-menu.jpg" width="150px" alt="About Inset Image">
+                            <img class="about-inset" src="images/special-menu.jpg" width="150px"
+                                alt="About Inset Image">
                         </div>
                     </div>
                 </div>
