--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                                 <p>
                                     <i class="fa fa-mobile" aria-hidden="true"></i>
                                     <span>
-                                        <a href="tel:+043529549029">04352 9549029</a>
+                                        <a href="tel:+43529549029">+4352 9549029</a>
                                     </span>
                                 </p>
                                 <p>
