--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <!-- color -->
     <link id="changeable-colors" rel="stylesheet" href="css/colors/orange.css" />
 
-    <!-- Modernizer -->
-    <script src="js/modernizer.js"></script>
+    <!-- Modernizer
+    <script src="js/modernizer.js"></script> -->
 
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -508,6 +508,8 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- ALL PLUGINS -->
     <script src="js/custom.js"></script>
+    <!-- Modernizer -->
+    <script src="js/modernizer.js"></script>
 </body>
 
 </html>
