--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <!-- <meta name="author" content=""> -->
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="images/favico.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+    <link rel="icon" href="images/favico.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="images/favico.ico">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
