--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                         <div class="col-md-4 col-sm-6 co-xs-12 gal-item">
                             <div class="box">
                                 <a href="#" data-toggle="modal" data-target="#2">
-                                    <img src="images/portoGallery1.png" alt="Meat and onion" />
+                                    <img src="images/dno.jpg" alt="Meat and onion" />
                                 </a>
                                 <div class="modal fade" id="2" tabindex="-1" role="dialog">
                                     <div class="modal-dialog" role="document">
@@ -235,7 +235,7 @@
                                             <button type="button" class="close" data-dismiss="modal"
                                                 aria-label="Close"><span aria-hidden="true">×</span></button>
                                             <div class="modal-body">
-                                                <img src="images/portoGallery1.png" alt="Meat and onion" />
+                                                <img src="images/dno.jpg" alt="Meat and onion" />
                                             </div>
                                         </div>
                                     </div>
@@ -438,7 +438,7 @@
                                 <p>
                                     <i class="fa fa-mobile" aria-hidden="true"></i>
                                     <span>
-                                        <a href="tel:+43529549029">+4352 9549029</a>
+                                        <a href="tel:+4943529549029">+4943 529549029</a>
                                     </span>
                                 </p>
                                 <p>
