--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
 
     <!-- Site Metas -->
-    <title>Porto Adria Restaurant</title>
+    <title>Restaurant Porto Adria</title>
     <meta name="keywords"
         content="restaurants near me, food near me, porto adria, restaurant, mexican restaurants, italian restaurants, porto adria restaurant">
 
