--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     Filetspezialitäten, sowie verschiedene Fisch- und vegetarische Gerichte.">
     <!-- <meta name="author" content=""> -->
 
+    <link rel="canonical" href="https://portoadria.de/index.html">
+
     <!-- Site Icons -->
     <link rel="icon" href="images/favico.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="images/favico.ico">
