--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Site Metas -->
     <title>Restaurant Porto Adria</title>
     <meta name="keywords"
-        content="restaurants near me, food near me, porto adria, restaurant, mexican restaurants, italian restaurants, porto adria restaurant">
+        content="restaurants near me, food near me, porto adria, restaurant, mexican restaurants, italian restaurants, porto adria restaurant, restaurant porto adria, balkan">
 
     <meta name="description" content="Genießen Sie in unserem Restaurant den kulinarischen Genuss des Balkans. Unsere reichhaltige Speisekarte hält für jeden Geschmack etwas bereit. Im netten Ambiente
     servieren wir Ihnen frisch zubereitete und liebevoll angerichtete Steak- &
