--- a/index.html
+++ b/index.html
@@ -48,6 +48,15 @@
 </head>
 
 <body>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M68ZJHBD6G"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-M68ZJHBD6G');
+    </script>
     <!-- <div id="loader">
         <div id="status"></div>
     </div> -->
