--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 
 <body>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-M68ZJHBD6G"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PEY0WJDTB4"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-M68ZJHBD6G');
+        gtag('config', 'G-PEY0WJDTB4');
     </script>
     <!-- <div id="loader">
         <div id="status"></div>
