--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     <link rel="canonical" href="https://portoadria.de/index.html">
 
     <!-- Site Icons -->
-    <link rel="icon" href="images/favico.ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="images/favico.ico">
-
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+    <link rel="manifest" href="images/site.webmanifest">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Site CSS -->
