--- a/index.html
+++ b/index.html
@@ -165,9 +165,8 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
                         <div class="about-images">
-                            <img class="about-main" src="images/cevapi.jpg" width="350px" alt="About Main Image">
-                            <img class="about-inset" src="images/special-menu.jpg" width="150px"
-                                alt="About Inset Image">
+                            <img class="about-main" src="images/newImage.jpg" width="350px" alt="About Main Image">
+                            <!-- <img class="about-inset" src="images/special-menu.jpg" width="150px" alt="About Inset Image"> -->
                         </div>
                     </div>
                 </div>
