--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <h6 class="copy-title"> Copyright &copy; 2024 Porto Adria <a href="#" target="_blank"></a>
+                            <h6 class="copy-title"> Copyright &copy; 2024 Porto Adria. <a href="https://webmajstori.rs/" target="_blank">Developed by: WebMajstori</a>
                             </h6>
                         </div>
                     </div>
