Menu image changed and working hours

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                     <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
                         <div class="about-images">
-                            <img class="about-main" src="images/newImage.jpg" width="350px" alt="About Main Image">
+                            <img class="about-main" src="images/special-menu.jpg" width="350px" alt="About Main Image">
                             <!-- <img class="about-inset" src="images/special-menu.jpg" width="150px" alt="About Inset Image"> -->
                         </div>
                     </div>
@@ -714,11 +714,12 @@
                         <!-- end col -->
                         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                             <div class="footer-box-d">
-                                <h3>Öffnungszeiten</h3>
+                                <h3>Öffnungszeiten Nebensaison:</h3>
 
                                 <ul>
                                     <li>
-                                        <p>Montag - Sonntag </p>
+                                        <p>Dienstag - Sonntag </p>
+                                        <span> 12:00 - 14:30 Uhr</span> <br>
                                         <span> 17:00 - 22:00 Uhr</span>
                                     </li>
                                 </ul>
@@ -732,7 +733,7 @@
                                 <ul>
                                     <li>
                                         <p>Montag - Sonntag </p>
-                                        <span> 12:00 - 15:00 Uhr</span>
+                                        <span> 12:00 - 22:00 Uhr</span>
                                     </li>
                                 </ul>
                             </div>
